--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -29,7 +29,7 @@
 .red{
     position: absolute;
     top: 90vh;
-    left: 0.75%;
+    left: 2%;
     width: 100px;
     height: auto;
     overflow: hidden;
@@ -477,26 +477,27 @@
 }
 .box{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     justify-content: center;
     /*height: 770px;*/
-    margin-top: 40px;
+    margin-top: 10px;
     border-radius: 24px;
     margin-bottom: 100px;
-    margin-right: 150px;
-    margin-left: 150px;
-    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+    margin-right: 30%;
+    margin-left: 30%;
+    text-align: center;
 }
 .box-dark{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     justify-content: center;
-    margin-top: 40px;
+    /*height: 770px;*/
+    margin-top: 10px;
     border-radius: 24px;
     margin-bottom: 100px;
-    margin-right: 150px;
-    margin-left: 150px;
-    box-shadow: rgba(250, 248, 248, 0.2) 0px 2px 4px ;
+    margin-right: 30%;
+    margin-left: 30%;
+    text-align: center;
 }
 .mainbody{
     position: relative;
@@ -506,9 +507,6 @@
 }
 .head{
     font-family: 'Montserrat', sans-serif;
-}
-.box-primary{
-    display: flex;
 }
 .box-secondary{
     display: grid;
@@ -530,8 +528,9 @@
     overflow: hidden;
 }
 .box-social{
+    padding-top: 40px;
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 30% 30% 30%;
 }
 .mailid{
     margin-bottom: 70px;
@@ -545,44 +544,32 @@
 .header-contact{
     display: none;
 }
-
-@media screen and (min-width: 1087px ){
-    .box-map{
-        display: none;
-    }
-    .images-phone{
-        display: none;
-    }
-   
+.message-box{
+    text-align: left;
 }
-@media screen and (min-width: 600px ) and (max-width:1087px){   
-    .images-phone{
-        display: none;
+@media screen and (min-width: 1000px ){
+}
+@media screen and (min-width: 650px ) and (max-width:1000px){
+    .MuiInputBase-input{
+
+        width:40vw !important;
     }
     .circle{
         display: none;
     }
-    .box-address{
-        display: none;
-    }
-    .box-image{
-        display: none;
-    }
     .box{
         box-shadow: none;
-        grid-template-rows: 70% 30%;
+        grid-template-rows: 100%;
         grid-template-columns: 100%;
-        height: 1000px;
     }
     .box-dark{
         box-shadow: none;
-        grid-template-rows: 70% 30%;
+        grid-template-rows: 100%;
         grid-template-columns: 100%;
-        height: 1000px;
     }
 
     .box-detail{
-        grid-template-rows: 0%  70% 30%;
+        grid-template-rows: 100%;
         
     }
     .form-message{
@@ -590,25 +577,18 @@
 
     }
     .box-mail{
-        width: 135px;
-    }
-    .box-secondary{
-        margin-top: -8vh;
+        width: 130px;
     }
     .box-map{
         margin: 10px;
-        margin-left: 2vh;
-        height: 40vh;
+        margin-left: 80px;
+        width: 295px ;
+        height: 200px;
         overflow: hidden;
         border-radius: 5px;
     }
     .box-social{
-        margin-top: 45vh;
-        margin-left: 5vh;
-        margin-bottom: -15vh;
-    }
-    .box-primary{
-        margin-left: -10vh;
+        margin-top: 250px;
     }
     .header-contact{
         display: none;
@@ -616,7 +596,11 @@
     
 }
 
-@media screen and (max-width: 600px) and (min-width:0px){
+@media screen and (max-width: 650px) and (min-width:0px){
+    .MuiInputBase-input{
+        width:70vw !important;
+        height: 20px !important;
+    }
     .header-contact{
         justify-content: center;
         align-items: center;
@@ -629,43 +613,29 @@
     }
     .mainbody{
         position: relative;
-        height: 180vh;
+        height: 120vh;
     }
     .sub-header{
         font-size: 20px;
         text-align: center;
-    }
-    .images-desktop{
-        display: none;
-    }
-    .box-image {
-        display: none;
-    }
+    } 
     .box-address{
         display: none;
     }
-    .box-primary{
-        height: 500px;
-        justify-content: center;
-        align-items: center;
-    }
     .box{
-        grid-template-rows: 40% 60%;
+        grid-template-rows: 100%;
         grid-template-columns: 100%;
-        width:80%;
-        height: 250vh;
+        height: 140vh;
         /*border: 1px solid black;*/
-        margin-left: 30px;
         margin-bottom: 30vh;
         box-shadow: none;
         /*margin-bottom: 1000px;*/
     }
     .box-dark{
+        grid-template-rows: 100%;
         grid-template-columns: 100%;
-        width: 80%;
-        height: 150vh;
+        height: 140vh;
         /*border: 1px solid black;*/
-        margin-left: 30px;
         margin-bottom: 30vh;
         box-shadow: none;
         /*margin-bottom: 1000px;*/
@@ -686,28 +656,40 @@
         
     }
     .box-social{
-        margin-top: 35vh;
-        margin-left: 1.5vh;
+        margin-top: 250px;
+        margin-left: 25px;
         margin-bottom: 25px;
         grid-template-columns: 22% 22% 22% 22%;
-
-    }
-    .talk{
-        margin-top: 5vh;
-        margin-left: 2vh;
     }
     .box-map{
         margin: 5px;
-        margin-top: 2vh;
-        height: 30vh;
+        width: 295px ;
+        height: 200px;
         overflow: hidden;
         border-radius: 5px;
     }
     .submit{
-        height: 1.5rem;
+        margin-top:5px;
+        width: 10rem;
+        height: 2rem;
     }
     .MuiFormControl-root{
         width:17rem;
+    }
+    .box-primary{
+        width:100vh;
+        height:500px !important;
+    }
+    .box{
+        margin: 0 10% ;
+        text-align: initial !important;
+    }
+    .box-dark{
+        margin: 0 10% ;
+        text-align: initial !important;
+    }
+    .message-box:last-child{
+        text-align: center !important;
     }
     
 }
