--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -613,7 +613,7 @@
     }
     .mainbody{
         position: relative;
-        height: 120vh;
+        height: 130vh !important;
     }
     .sub-header{
         font-size: 20px;
